Fix nav spacing, update resume.

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -11,7 +11,6 @@ $breakpoint-mobile: 768px;
 
 @media(max-width: $breakpoint-mobile) {
     div.blog-list-container {
-        margin-top: 114px !important;
         padding: 0 !important;
     }
 }
@@ -28,8 +27,6 @@ $breakpoint-mobile: 768px;
 
 @media(max-width: $breakpoint-navbar) {
     .blog-list-container {
-        margin-top: 146px !important;
-
         .blog-list {
             padding-top: 2rem;
         }
